more fixes with types etc2

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Survey with questions for a veterinary consultation visit">
     <title>Veterinary consultation survey</title>
   </head>
   <body>
